# AMX-Benchmark

./: .gitignore  CMakeLists.txt  run.sh
include/: amx.h  benchmark.h  examples.h  gemm.h  gemv.h  utils.h
src/: amx.cpp  benchmark.cpp  examples.bf16.cpp  examples.complex.cpp  examples.fp16.cpp  examples.gemv.cpp  examples.int8.cpp  gemv.cpp  main.cpp  utils.cpp
src/gemm/: gemm.baseline.cpp  gemm.benchmark.cpp  gemm.reference.cpp  gemm.utils.cpp
src/gemv/: benchmark.gemv.cpp  gemv_baseline.cpp  gemv_multithread.cpp  gemv_prefetch.cpp  gemv_reference.cpp  gemv_reordered.cpp
src/gemv/test/: test_multithreads.cpp  test_prefetch_offset.cpp
